# workshop-1

./: LICENSE  Librerias.md  README.md  haskell-workshop.cabal  stack.yaml
app/: Main.hs
src/: FinalReddit.hs  Http.hs  Intro.hs  MyReddit.hs  Pelis.hs  Solucion.hs
