name:                haskell-workshop
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/BsAsHaskell/workshop-1/
license:             BSD3
license-file:        LICENSE
author:              Ezequiel Alvarez, Joaquin Azcarate
copyright:           MIT
category:            Workshop
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Wno-unused-imports -Wno-missing-signatures -Wno-type-defaults
  hs-source-dirs:      src
  exposed-modules:     Pelis
                     , Intro
                     , Solucion
                     , Http
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , string-conversions
                     , req
                     , data-default-class
  default-language:    Haskell2010

executable pelis
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-workshop
  default-language:    Haskell2010
